upload videos fully functional

--- a/src/style/auth.scss
+++ b/src/style/auth.scss
@@ -77,7 +77,8 @@ body{
         height: 40px;
         outline: none;
         color: $white;
-    }
+        font-size: 0.7em;
+        }
     button{
         background-color: $blue;
         color: $white;
