--- a/src/style/admin.scss
+++ b/src/style/admin.scss
@@ -1,14 +1,12 @@
 $black : #1b2a38;
-// $black : #020228;
 $dark_black: #030f1c;
-// $dark_black: #011031;
 $blue: #699be5;
 $white : #EAE8E8;
 $grey: #f1f1f1;
 $dark_grey: #708090;
 $brown: #828282;
-$box_shadow: 0 2px 2px 0 rgba(255,255,255, 0.14),0 3px 1px -2px rgba(255,255,255, 0.12), 0 1px 5px 0 rgba(255,255,255, 0.2);
-$webkit_shadow: 0 2px 2px 0 rgba(255,255,255, 0.14), 0 3px 1px -2px rgba(255,255,255, 0.12), 0 1px 5px 0 rgba(255,255,255, 0.2);
+$box_shadow: 0 2px 2px 0 rgba(8,8,8, 0.14),0 3px 1px -2px rgba(8,8,8, 0.12), 0 1px 5px 0 rgba(8,8,8, 0.2);
+$webkit_shadow: 0 2px 2px 0 rgba(8,8,8, 0.14), 0 3px 1px -2px rgba(8,8,8, 0.12), 0 1px 5px 0 rgba(8,8,8, 0.2);
 /* width */
 ::-webkit-scrollbar {
     width: 2px;
@@ -19,7 +17,6 @@ $webkit_shadow: 0 2px 2px 0 rgba(255,255,255, 0.14), 0 3px 1px -2px rgba(255,255
 ::-webkit-scrollbar-track {
     background: $black;
     border-radius: 10px;
-
 }
 /* Handle */
 ::-webkit-scrollbar-thumb {
@@ -192,7 +189,7 @@ ul{
     color: $dark_grey
 }
 .movie{
-    cursor: pointer;
+    width: 200px;
     .percent_rated{
         font-size: 0.7em;
         color: $white;
@@ -209,11 +206,13 @@ ul{
         width: 200px;
         height: 200px;
         display: none;
+        cursor: pointer;
        
     }
     .img_cont{
         width: 200px;
         height: 200px;
+        cursor: pointer;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
@@ -279,10 +278,83 @@ ul{
     .title_view{
         color: $white;
         font-size: 1.3em;
-
     }
 }
 .movie_description{
     color: $white;
     font-size: 0.9em;
+}
+.timeline_movie:hover{
+    .img{
+        box-shadow:inset 0 0 0 2000px  rgba(0,0,0, 0.12);
+    }
+    .action_icon{
+        display: block !important;
+    }
+}
+.timeline_movie{
+    box-shadow: $box_shadow;
+    -webkit-box-shadow: $webkit_shadow;
+    border-radius: 10px;
+    cursor: pointer;
+    color: $white;
+    background-color: $black;
+    .img{
+        background: url('/img/mockingjay.jpeg');
+        top: 0;
+        bottom: 0; 
+        overflow: hidden;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;;
+        height: 170px;
+        min-width: 200px;
+        border-radius: 7px;
+        background-color: $black;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .action_icon{
+            display: none;
+        }
+    }
+    .movie_title{
+        font-size: 1.2em;
+        font-weight: bold;
+        overflow: hidden;
+        display: -webkit-box;
+        word-wrap: break-word;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
+    .movie_description{
+        font-size: 0.75em;
+        color: $dark_grey;
+        word-wrap: break-word;
+        padding: 3px;
+        font-size: 14px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        max-height: 300px !important;
+    }
+}
+.relative{
+    position: relative;
+    .absolute_bottom{
+        position: absolute;
+        bottom: 0;
+    }
+}
+.add_box{
+    background-color: $black;
+    color: $white;
+    cursor: pointer;
+    width: 200px;
+    border-radius: 5px;
+    height: 200px;
+    font-size: 50px;
+    font-weight: bold;
 }
