--- a/src/style/admin.scss
+++ b/src/style/admin.scss
@@ -5,26 +5,23 @@ $white : #EAE8E8;
 $grey: #f1f1f1;
 $dark_grey: #708090;
 $brown: #828282;
+$red: #FF7F7F;
 $box_shadow: 0 2px 2px 0 rgba(8,8,8, 0.14),0 3px 1px -2px rgba(8,8,8, 0.12), 0 1px 5px 0 rgba(8,8,8, 0.2);
 $webkit_shadow: 0 2px 2px 0 rgba(8,8,8, 0.14), 0 3px 1px -2px rgba(8,8,8, 0.12), 0 1px 5px 0 rgba(8,8,8, 0.2);
-/* width */
 ::-webkit-scrollbar {
     width: 2px;
     height: 2px;  
     margin: 2px;
 }
-/* Track */
 ::-webkit-scrollbar-track {
     background: $black;
     border-radius: 10px;
 }
-/* Handle */
 ::-webkit-scrollbar-thumb {
     background: $white;
     border: 1px solid #f1f1f1;
     border-radius: 10px;
 }
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #ffffff;
 }
@@ -357,4 +354,38 @@ ul{
     height: 200px;
     font-size: 50px;
     font-weight: bold;
+}
+.movie_cover{
+    height: 70vh;
+    background-color: $black;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    box-shadow: inset 0 0 0 2000px  rgba(0,0,0, 0.7);
+    img{
+        height: 75%;
+    }
+    .movie_preview_text{
+        min-height: 75%;
+        color: $white;
+        overflow-y: auto !important;
+        .cast{
+            color: $dark_grey;
+            font-size: 0.9em;
+        }
+        .desc{
+            font-size: 0.9em
+        }
+    }
+}
+.large_title{
+    font-size: 35px;
+    color: $white;
+    font-weight: bold;
+}
+small{
+    color: $red
 }
