--- a/src/style/admin.scss
+++ b/src/style/admin.scss
@@ -386,6 +386,11 @@ ul{
     color: $white;
     font-weight: bold;
 }
-small{
+.small{
     color: $red
+}
+.md_text{
+    font-size: 1.5em;
+    font-weight: bold;
+    color: $white
 }
