--- a/src/style/admin.scss
+++ b/src/style/admin.scss
@@ -72,7 +72,7 @@ ul{
 }
 .active{
     background-color: $dark_black;
-    border-left: 3px solid $brown
+    border-left: 3px solid $brown !important;
 }
 .border_radius{
     border-radius: 5px;
